chore: add juejin link

--- a/public/index.html
+++ b/public/index.html
@@ -70,8 +70,10 @@
                     <a href="https://github.com/jobinleung"> github </a>
                     
                     <a href="https://medium.com/@jobinleung"> medium </a>
+
+                    <a href="https://juejin.cn/user/729731451585319/posts"> juejin </a>
                 </div>
-                created by Jobin with ♥
+                <p>created by Jobin with ♥</p>
     </div>
     <!--
       This HTML file is a template.
